RESOLVED FIXED182606
CoreAudioCaptureSourceIOSListener should be a WebProcess singleton
https://bugs.webkit.org/show_bug.cgi?id=182606
Summary CoreAudioCaptureSourceIOSListener should be a WebProcess singleton
youenn fablet
Reported 2018-02-08 09:47:30 PST
Currently, there is one listener per capture source.
Attachments
Patch (12.07 KB, patch)
2018-02-08 10:15 PST, youenn fablet
no flags
Patch (13.49 KB, patch)
2018-02-08 12:34 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2018-02-08 09:48:14 PST
youenn fablet
Comment 2 2018-02-08 10:15:36 PST
EWS Watchlist
Comment 3 2018-02-08 10:17:42 PST
Attachment 333385 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.mm:126: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4 2018-02-08 10:43:37 PST
Comment on attachment 333385 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=333385&action=review > Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:773 > + if (unit.isSuspended()) > + unit.reconfigureAudioUnit(); I'm not sure this is a good idea. What happens if a page that already has user permission calls getUserMedia({audio:true}) during an interruption?
youenn fablet
Comment 5 2018-02-08 12:34:00 PST
EWS Watchlist
Comment 6 2018-02-08 12:42:31 PST
Attachment 333409 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.mm:126: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2018-02-08 21:05:27 PST
Comment on attachment 333409 [details] Patch Clearing flags on attachment: 333409 Committed r228310: <https://trac.webkit.org/changeset/228310>
WebKit Commit Bot
Comment 8 2018-02-08 21:05:29 PST
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 9 2018-02-20 18:53:01 PST
*** Bug 179964 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.