Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.h
@@ -33,13 +33,12 @@ OBJC_CLASS WebCoreAudioCaptureSourceIOSListener;
 
 namespace WebCore {
 
-class CoreAudioCaptureSourceIOS final : public CoreAudioCaptureSource {
+class CoreAudioCaptureSourceFactoryIOS final : public CoreAudioCaptureSourceFactory {
+public:
+    CoreAudioCaptureSourceFactoryIOS();
+    ~CoreAudioCaptureSourceFactoryIOS();
+
 private:
-    friend class CoreAudioCaptureSource;
-
-    CoreAudioCaptureSourceIOS(const String& deviceID, const String& label);
-    ~CoreAudioCaptureSourceIOS();
-
     RetainPtr<WebCoreAudioCaptureSourceIOSListener> m_listener;
 };
 
